getting there, draft2

--- a/9monthReport.tex
+++ b/9monthReport.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,12pt,twoside]{report}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=3cm]{geometry}
 \usepackage{natbib}
+\usepackage{amsmath}
 \bibliographystyle{apalike}
 
 \include{thesis.preamble}
@@ -29,6 +30,7 @@
 % body of thesis comes here
 
 \input{conclusion/conclusion}
+\input{plan/plan}
 
 \appendix
 % appendices come here
