--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -185,7 +185,7 @@ year = "2013",
 }
 
 @article{Landau,
-author = "L. Landau and E. Lifshits",
+author = "L. Landau and E. Lifshitz",
 title = "On the theory of the dispersion of magnetic permeability in ferromagnetic bodies",
 journal = "Phys. Z. Sowjetunion",
 volume = "8",
@@ -324,4 +324,28 @@ title = "The {F}eynman lectures on physics",
 publisher = "Addison-Wesley",
 address = "Reading, Mass.",
 year = "1964",
+}
+
+@book{BrownMM,
+author = "W. F. Brown",
+title = "Micromagnetics",
+publisher = "Interscience",
+address = "New York",
+year = "1963",
+}
+
+@phdthesis{ScholzTh,
+author = "Werner Scholz",
+title = "Scalable parallel micromagnetic solvers for magnetic nanostructures",
+school = "Technischen Universit{\"a}t Wien",
+year = "2003",
+}
+
+@article{Rhodes,
+author = "P. Rhodes and G. Rowlands",
+title = "Demagnetising energies of uniformly magnetised rectangular blocks",
+journal = "Proc. Leeds Phil. Lit. Soc., Sci. Sect.",
+volume = "6",
+pages = "191--210",
+year = "1954",
 }
