--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -1,18 +1,4 @@
 
-\chapter{Conclusion}
+\chapter{Results}
 
-\label{ch:conclusions}
-
-\section{Summary of Thesis Achievements}
-
-Summary.
-
-
-\section{Applications}
-
-Applications.
-
-
-\section{Future Work}
-
-Future Work.
+\label{ch:results}
