--- a/icthesis.sty
+++ b/icthesis.sty
@@ -92,18 +92,18 @@
 }
 
 \def\body{
-    \cleardoublepage    
+    %\cleardoublepage    
     \pagestyle{uheadings}
     \tableofcontents
     \pagestyle{plain}
-    \cleardoublepage
-    \pagestyle{uheadings}
-    \listoftables
-    \pagestyle{plain}
-    \cleardoublepage
-    \pagestyle{uheadings}
-    \listoffigures
-    \pagestyle{plain}
+    %\cleardoublepage
+    %\pagestyle{uheadings}
+    %\listoftables
+    %\pagestyle{plain}
+    %\cleardoublepage
+    %\pagestyle{uheadings}
+    %\listoffigures
+    %\pagestyle{plain}
     \cleardoublepage
     \pagestyle{uheadings}
     \pagenumbering{arabic}
