are we done here?

--- a/9monthReport.tex
+++ b/9monthReport.tex
@@ -2,6 +2,8 @@
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=3cm]{geometry}
 \usepackage{natbib}
 \usepackage{amsmath}
+\usepackage{graphicx}
+\graphicspath{{./figures/}}
 \bibliographystyle{apalike}
 
 \include{thesis.preamble}
@@ -29,7 +31,7 @@
 
 % body of thesis comes here
 
-\input{conclusion/conclusion}
+\input{results/results}
 \input{plan/plan}
 
 \appendix
