--- a/background/background.tex
+++ b/background/background.tex
@@ -153,4 +153,4 @@ Finite element methods (FEM) have the advantage of being more flexible in regard
 
 The minimisation of the magnetic Gibbs free energy , though useful, can lead to unphysical situations where the final configuration lies in a shallow energy minimum. Also, it is only useful to find equilibrium states and so the path taken cannot be interpreted as a physical solution that reflects the dynamics. The solution to this problem is to solve the dynamics of the system via the LLGE. \citet{Suess} developed a preconditioned integration method for the LLGE using a FEM. This allowed to simulate the dynamics and configurations of granular media.\par
 
-The capabilities of today's computers allows to simulate not only single grains but clusters of them that interact magnetostatically with each other. This once untractable problem has been proved to be crucial and influence the critical sizes of single domain grains. \citet{Mxwt2} used a finite difference method and investigated the effect of magnetostatic interactions between magnetite grains on the hysteresis parameters. \citet{Mxwt1} used the recently measured \citep{Chang} magnetic parameters of highly pure greigite to investigate the intergrain influence in chains of greigite and its implications for magnetosome crystals. These investigations can be furthered by FEM by modelling more realistic geometries and even multiple magnetic phases.\par
+The capabilities of today's computers allows to simulate not only single grains but clusters of them that interact magnetostatically with each other. This once untractable problem has been proved to be crucial and influence the critical sizes of single domain grains. \citet{Mxwt2} used a finite difference method and investigated the effect of magnetostatic interactions between magnetite grains on the hysteresis parameters. \citet{Mxwt1} used the recently measured \citep{Chang} magnetic parameters of highly pure greigite to investigate the intergrain influence in chains of greigite and its implications for magnetosome crystals. These investigations can be furthered by FEM by modelling more realistic geometries and multiple magnetic phases.
