--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -349,3 +349,39 @@ volume = "6",
 pages = "191--210",
 year = "1954",
 }
+
+@misc{micromag,
+author = "L. Nagy and P. {{\'O} Conbhu{\'i}} and W. Williams and L. Mitchell and M. Valdez-Grijalva ",
+title = "micromag",
+year = "2014",
+note = "http://bitbucket.org/lesnagy/micromag",
+}
+
+@article{Brunotte,
+author = "Xavier Brunotte and G{\'e}rard Meunier and J. F. Imhoff",
+title = "Finite element modeling of unbounded problems using transformations: a rigorous, powerful and easy solution",
+journal = "IEEE Transactions on Magnetics",
+volume = "28",
+number = "2",
+pages = "1663--1666",
+year = "1992",
+}
+
+@article{Bazylinski,
+author = "Dennis A. Bazylinski and Richard B. Frankel and Brigid R. Heywood and Stephen Mann and Jown W. winh and Percy L. Donaghay and Alfred K. Hanson",
+title = "Controlled biomineralization of magnetite (Fe$_3$O$_4$) and greigite (Fe$_3$S$_4$) in a magnetotactic bacterium",
+journal = "Applied and Environmental Microbiology",
+volume = "61",
+number = "9",
+pages = "3232--3239",
+year = "1995",
+}
+
+@article{Costanzo2,
+author = "Vincenzo Costanzo-{\'A}lvarez and Milagrosa Aldana and Germ{\'a}n Bayona and Diego L{\'o}pez-Rodr{\'i}guez and Joan Marie Blanco",
+title = "Rock magnetic characterization of early and late diagenesis in a stratigraphic well from the {L}lanos foreland basin ({E}aster {C}olombia)",
+journal = "Geological Society, London, Special Publications",
+volume = "371",
+pages = "199--216",
+year = "2012",
+}
