--- a/plan/plan.tex
+++ b/plan/plan.tex
@@ -2,3 +2,9 @@
 \chapter{Plan}
 
 \label{ch:plan}
+
+I will finish simulating single octahedral and truncated octahedral grains of greigite. Hysteresis loops for bigger grains are still lacking though hysteresis loops are quite long to simulate so only slightly bigger grains will be able to be modelled on the current cluster. Domain structures for grains {\raise.17ex\hbox{$\scriptstyle\sim$}}1 micron will be modelled and these will be possibly the most interesting. It is intended to turn this initial investigation into a paper for publication.\par
+
+The next step is to begin testing simulations of clusters of grains and add the magnetostatic interaction between them. An interesting idea is to model chains of magnetite and greigite grains as those found in magnetotactic bacteria (see \citet{Bazylinski}). To my knowledge, chains of only magnetite or greigite have so far been modelled (like \citet{Mxwt1}) so it would be of interest and also an important milestone toward resolving the structure of framboidal aggregates.\par
+
+Another important step towards realistic modelling of the framboidal aggregates is to add thermal fluctuations. Micromag has proven a solid micromagnetic solver and adding temperature dependence will (hopefully) not be too difficult. Later on, magnetoelastic effects could also be added which would account for all the magnetic energy terms.
