--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -9,4 +9,10 @@ Though the discussion on the exact mechanism for the formation of these minerals
 
 It was recognized by \citet{Reynolds} that in some cases iron sulfides may be more important to the magnetic contrasts and thus to the identification of prospective oil-producing fields than iron oxides. Particularly, greigite has been identified as an authigenic mineral of the utmost importance in the Simpson oil field in Alaska \citep{Reynolds}. Greigite is an iron sulfide (Fe$_3$S$_4$) that can be thought of as the sulfur equivalent of the iron oxide magnetite (Fe$_3$O$_4$) as they have the same crystal structure only with sulfur replacing oxygen. Like magnetite, it is highly magnetic. Nevertheless, since it is thought to be unstable, its importance as a palaeomagnetic recorder has not been as readily realized as that of magnetite. Also, its magnetic parameters were poorly understood until the work of \citet{Chang} who by synthesising highly pure greigite were able to measure the critical magnetic parameters. \citet{Mxwt1} made use of the new accurate measurements of greigite to simulate greigite grains and the effect of intergrain interactions.\par
 
-\citet{Liu} has proposed that magnetic mineral grains that are linked to hydrocarbon seepage have sizes {\raise.17ex\hbox{$\scriptstyle\sim$}}25nm and thus generally in the single domain (SD) range. In terms of morphology, it has been repeatedly found (see \citet{Aldana} and references therein) that roughly spherical grains of magnetite and/or greigite assemble in raspberry-shaped aggregates called framboids (from the french \textit{framboise} meaning raspberry). It is my interest to model these structures via micromagnetics to investigate their domain structure and behaviour in routine rock-magnetic and palaeomagnetic measurements that could also correlate with the size of the aggregates. It is an open question how the intergrain interactions will affect the otherwise simpler problem of modelling single grains, however \citet{Mxwt2}, \citet{Mxwt1} have made a strong case for the importance of intergrain magnetostatic interactions. Further understanding of framboidal aggregates of greigite or magnetite could aid in developing future oil exploration techniques that are cheaper than more conventional techniques vastly used today.\par
+\citet{Liu} has proposed that magnetic mineral grains that are linked to hydrocarbon seepage have sizes {\raise.17ex\hbox{$\scriptstyle\sim$}}25nm and thus generally in the single domain (SD) range. In terms of morphology, it has been repeatedly found (see \citet{Aldana} and references therein) that roughly spherical grains of magnetite and/or greigite assemble in raspberry-shaped aggregates (see figure (\ref{Fig1})) called framboids (from the french \textit{framboise} meaning raspberry). It is my interest to model these structures via micromagnetics to investigate their domain structure and behaviour in routine rock-magnetic and palaeomagnetic measurements that could also correlate with the size of the aggregates. It is an open question how the intergrain interactions will affect the otherwise simpler problem of modelling single grains, however \citet{Mxwt2}, \citet{Mxwt1} have made a strong case for the importance of intergrain magnetostatic interactions. Further understanding of framboidal aggregates of greigite or magnetite could aid in developing future oil exploration techniques that are cheaper than more conventional techniques vastly used today.
+\begin{figure}[ht]
+\centering
+\includegraphics{fram.eps}
+\caption{SEM photomicrographs of framboidal Fe- and S-rich magnetic mineral (probably greigite). Taken from \citet{Costanzo2}.}
+\label{Fig1}
+\end{figure}
