starting correction of 1st draft *yawns*

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,7 +3,7 @@
 
 \section{Motivation and Objectives}
 
-It has been established via airborne magnetic surveys in the U.S.A. \citep{Donovan} that magnetic contrasts---that is, ``magnetisation that is different from background magnetisation and which may give rise to mappable magnetic anomalies detectable by conventional magnetometry" \citep{Machel}---are a common feature of hydrocarbon reservoir sites. \citet{Donovan} suggested that these magnetic anomalies are caused by near-surface magnetic minerals (specifically, magnetite) induced by upward hydrocarbon seepage from the underlying hydrocarbon reservoir. Further studies by \citet{Donovan2}, \citet{Reynolds} and \citet{Elmore} in the U.S.A., \citet{Diaz}, \citet{Costanzo}, \citet{Guzman}, \citet{Gonzalez} in Venezuela and \citet{Liu3}, \citet{Liu2} and \citet{Liu} in China have provided strong evidence for a genetic relationship between the magnetic contrasts produced by ferrimagnetic minerals near the surface and the underlying reservoir. These investigations confirm the original hypothesis of \citet{Donovan} that the reducing environment caused by the upward seepage from the reservoirs is conducive to the formation of magnetic minerals---such as magnetite and other Fe-oxides, and greigite and other Fe-sulfides---and/or the destruction of minerals such as hematite \citep{Machel} and thus further the case for using a combination of aeromagnetic surveying and rock-magnetic measurements of soils and rocks for cheap hydrocarbon prospecting as proposed by \citet{Donovan2}.\par
+Airborne magnetic surveys over Cement oil field, Oklahoma, U.S.A. \citep{Donovan} revealed magnetic anomalies, that is, measurable variations in the background magnetic field. \citet{Donovan} suggested that these anomalies are caused by the creation of authigenic near-surface magnetite in an environment of hydrocarbon seepage from the underlying reservoir. Further studies by \citet{Donovan2}, \citet{Reynolds} and \citet{Elmore} in the U.S.A., \citet{Diaz}, \citet{Costanzo}, \citet{Guzman}, \citet{Gonzalez} in Venezuela and \citet{Liu3}, \citet{Liu2} and \citet{Liu} in China have provided strong evidence for a genetic relationship between the magnetic contrasts produced by ferrimagnetic minerals near the surface and the underlying reservoir. These investigations confirm the original hypothesis of \citet{Donovan} that the reducing environment caused by the upward seepage from the reservoirs is conducive to the formation of magnetic minerals---such as magnetite and other Fe-oxides, and greigite and other Fe-sulfides---and/or the destruction of minerals such as hematite \citep{Machel} and thus further the case for using a combination of aeromagnetic surveying and rock-magnetic measurements of soils and rocks for cheap hydrocarbon prospecting as proposed by \citet{Donovan2}.\par
 
 Though the discussion on the exact mechanism for the formation of these minerals is ongoing, \citet{Machel} have identified two primary agents for the precipitation of magnetic minerals under the influence of hydrocarbon seepage. At higher temperatures and thus higher depths they propose chemical processes as the main factor while at shallower depths and lower temperatures it is argued that microbial sulfate-reducing processes are playing the larger role. \citet{Machel} also emphasised the difficulty in linking a magnetic anomaly to a process of hydrocarbon seepage because the precipitation of magnetic minerals can cause positive or negative anomalies---that is, peaks or dips in the geomagnetic field and/or the magnetic susceptibility of the soils. Nevertheless, careful analysis of the local conditions can result in the successful application of rock-magnetic measurements to hydrocarbon exploration (see \citet{Liu} and \citet{Donovan2}). Magnetization of oil bearing rocks can also be used to assess the quality of oil as discussed by \citet{Emmerton}.\par
 
